# control

./: CMakeLists.txt  a.out  angular.hpp  calibration.cpp  calibration.h  control.hpp  encoder.cpp  encoder.h  encoder_processor.cpp  encoder_processor.hpp  esp32_homing_control.cpp  imu_filter.cpp  imu_filter.h  main  main.cpp  main_visualizer.cpp  motor_driver.cpp  motor_driver.hpp  movezero.cpp  pid_controller.hpp  rocket_attitude.hpp  test_math  test_math.cpp
